2004-11-11  Adam Fedor  <fedor@gnu.org>

	* Version: Add numeric value for runtime versioning.
	* Souce/GNUmakeifle: Add resource set install.
	* Source/GNUmakefile.postamble (Info-gnustep.plist): New target.

2004-11-11  Adam Fedor  <fedor@gnu.org>

	* Model/GMAppKit.m ([NSPopUpButton -encodeWithModelArchiver:]): 
	More robust method for getting title (works on OPENSTEP, from
	George Fleischmann).

2004-11-11  Fred Kiefer <FredKiefer@gmx.de>

	* Headers/AppKit/NSMenu.h
	* Source/NSMenu.m (-setMain:): New internal method to set the main
	menu of an application. Uses code from [NSApplication
	setMainMenu:] plus a display call for the new main menu.
	* Source/NSApplication.m (-setMainMenu:): Use the new method on
	NSMenu to flag a menu as main and cleaned up the logic.

2004-11-11 15:08  Alexander Malmberg <alexander@malmberg.org>

	* Source/NSCell.m (-_setupTextWithFrame:inView:editor:): Reduce the
	maximum size. Explicitly set the size of the text view, and make it
	not resizable.
	* Source/NSLayoutManager.m (-rectArrayForGlyphRange:
	withinSelectedGlyphRange:inTextContainer:rectCount:): Fix check for
	whether the starting index is inside a line frag rect.
	* Source/NSTextView.m (-sizeToFit): Don't increase the size if we
	have no inset.
	(-updateInsertionPointStateAndRestartTimer:): Force the insertion
	point rect to be inside the text view.
	(-scrollRangeToVisible:): If we are a non-rich-text field editor,
	adjust the scrolling to make the auto-scrolling more useful.

	Fixes bug #9279.

2004-11-10  Matt Rice <ratmice@yahoo.com>

	* Headers/Additions/GNUstepGUI/GSDisplayServer.h (-iconSize): New method
	declaration.
	(-iconTileImage): Ditto. 
	* Source/GSDisplayServer.m (-resolutionForScreen:): Fix Typo in Docs.
	(-boundsForScreen:): Ditto.
	(-windowBounds:): Ditto.
	(-iconSize): Implement new method.
	(-iconTileImage): Ditto.
	* Source/NSApplication.m (NSAppIconView): Remove 
	useWindowmakerIconBackground variable.
	(scaledIconSizeForSize): New function.